Added game jam backgrounds

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,26 @@ html, body {
 .game > * {
   padding: 0.75rem;
 }
+.game--hookshot {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../img/hookshot.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/hookshot.png");
+  background-position: center;
+}
+.game--envirometal {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../img/envirometal.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/envirometal.png");
+  background-position: center;
+}
+.game--invisiheist {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../img/invisiheist.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/invisiheist.png");
+  background-position: center bottom;
+}
+.game--cowball {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../img/cowball.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/cowball.png");
+  background-position: center;
+}
 
 #members {
   display: -webkit-box;
