--- a/assets/scss/include/var.scss
+++ b/assets/scss/include/var.scss
@@ -2,4 +2,5 @@ $dark: #333333;
 $medDark: #666666;
 $medLight: #999999;
 $light: #cccccc;
-$darkenBackground: 0.7;
+$darkenBackground: 0.6;
+$textOutlineSize: 1px;
