--- a/assets/scss/include/home.scss
+++ b/assets/scss/include/home.scss
@@ -1,3 +1,10 @@
 .container--center{
     height: 100%;
 }
+
+#header{
+    &__greeting{
+        user-select: none;
+        cursor: pointer;
+    }
+}
