--- a/assets/scss/include/about.scss
+++ b/assets/scss/include/about.scss
@@ -23,3 +23,15 @@
         padding: 0.75rem;
     }
 }
+
+@media only screen and (max-width: $large){
+    .member{
+        width: 75%;
+    }
+}
+
+@media only screen and (max-width: $medium){
+    .member{
+        width: 90%;
+    }
+}
