--- a/assets/scss/include/var.scss
+++ b/assets/scss/include/var.scss
@@ -4,3 +4,8 @@ $medLight: #999999;
 $light: #cccccc;
 $darkenBackground: 0.6;
 $textOutlineSize: 1px;
+
+$extraLarge: 1200px;
+$large: 992px;
+$medium: 779px;
+$small: 600px;
