--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ html, body {
 }
 
 .container > div {
-  margin: 2rem 0;
+  margin: 2% 0;
 }
 
 .btn {
@@ -51,6 +51,7 @@ html, body {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   text-decoration: none;
+  background-color: #333333;
 }
 
 .btn:hover {
@@ -65,6 +66,14 @@ html, body {
   color: #333333;
 }
 
+@media only screen and (max-width: 779px) {
+  .container {
+    margin: 0 10%;
+  }
+  .btn {
+    margin: 0.5rem;
+  }
+}
 .container--center {
   height: 100%;
 }
@@ -140,6 +149,16 @@ html, body {
   background-position: center;
 }
 
+@media only screen and (max-width: 992px) {
+  .game {
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 779px) {
+  .game {
+    width: 90%;
+  }
+}
 #members {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -168,4 +187,15 @@ html, body {
 }
 .member > * {
   padding: 0.75rem;
+}
+
+@media only screen and (max-width: 992px) {
+  .member {
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 779px) {
+  .member {
+    width: 90%;
+  }
 }
