--- a/assets/scss/include/games.scss
+++ b/assets/scss/include/games.scss
@@ -53,3 +53,15 @@
         background-position: center;
     }
 }
+
+@media only screen and (max-width: $large){
+    .game{
+        width: 75%;
+    }
+}
+
+@media only screen and (max-width: $medium){
+    .game{
+        width: 90%;
+    }
+}
