--- a/assets/scss/include/global.scss
+++ b/assets/scss/include/global.scss
@@ -31,8 +31,9 @@ html, body{
     justify-content: center;
 }
 
+
 .container > div{
-    margin: 2rem 0;
+    margin: 2% 0;
 }
 
 .btn{
@@ -42,6 +43,7 @@ html, body{
     padding: 1rem;
     transition: all 0.5s ease;
     text-decoration: none;
+    background-color: $dark;
 }
 
 .btn:hover{
@@ -53,4 +55,14 @@ html, body{
 .btn--active{
     background-color: $light;
     color: $dark;
+}
+
+@media only screen and (max-width: $medium){
+    .container{
+        margin: 0 10%;
+    }
+
+    .btn{
+        margin: 0.5rem;
+    }
 }
