--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,8 +67,11 @@ html, body {
 }
 
 @media only screen and (max-width: 779px) {
+  html, body {
+    background-size: 50%;
+  }
   .container {
-    margin: 0 10%;
+    margin: 0 5%;
   }
   .btn {
     margin: 0.5rem;
@@ -174,6 +177,7 @@ html, body {
 }
 
 .member {
+  background-color: #333333;
   border: 3px solid #cccccc;
   margin: 2rem 0;
   width: 50%;
