--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,10 @@ html, body {
   color: #333333;
 }
 
+.img--lightbackground {
+  background-color: #cccccc;
+}
+
 @media only screen and (max-width: 779px) {
   html, body {
     background-size: 50%;
@@ -181,16 +185,28 @@ html, body {
   border: 3px solid #cccccc;
   margin: 2rem 0;
   width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
-.member__name, .member__bio, .member__social {
-  margin: 0;
+.member__img {
+  height: 100px;
+  width: 100px;
+  border-radius: 25px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 25% 0;
+     object-position: 25% 0;
+}
+.member__img, .member__name, .member__bio, .member__social {
+  margin: 0.4rem;
 }
 .member__link {
   display: inline-block;
   color: plum;
 }
 .member > * {
-  padding: 0.75rem;
+  margin: 0.75rem;
 }
 
 @media only screen and (max-width: 992px) {
