--- a/assets/scss/include/about.scss
+++ b/assets/scss/include/about.scss
@@ -11,6 +11,7 @@
     margin: 2rem 0;
     width: 50%;
     display: flex;
+    position: relative;
 
     &__img{
         height: 100px;
@@ -18,6 +19,18 @@
         border-radius: 25px;
         object-fit: cover;
         object-position: 25% 0;
+    }
+
+    &__icon{
+        display: none;
+        height: 45px;
+        width: 45px;
+        border-radius: 12px;
+        object-fit: cover;
+        object-position: 25% 0;
+        position: absolute;
+        top: .5rem;
+        right: .5rem;
     }
 
     &__img, &__name, &__bio, &__social{
@@ -43,5 +56,13 @@
 @media only screen and (max-width: $medium){
     .member{
         width: 90%;
+
+        &__img{
+            display: none;
+        }
+
+        &__icon{
+            display: inline;
+        }
     }
 }
