--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,30 @@ html, body {
   cursor: pointer;
 }
 
+.body--animate {
+  background-color: initial;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.container--animate {
+  position: relative;
+}
+
+.content {
+  position: relative;
+  z-index: 100;
+}
+
+#background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -100;
+  padding: 0;
+  margin: 0;
+}
+
 #games {
   display: -webkit-box;
   display: -ms-flexbox;
