--- a/assets/scss/include/global.scss
+++ b/assets/scss/include/global.scss
@@ -8,9 +8,10 @@
 }
 
 *{
-    font-family: dogicapixel;
+    font-family: "Montserrat";
+    font-size: 1.1rem;
+    line-height: 125%;
     color: $light;
-    line-height: 150%;
 }
 
 html, body{
@@ -51,6 +52,7 @@ html, body{
     background-color: $light;
     color: $dark;
     transform: translate(7px, -7px);
+    border-color: $medDark;
 }
 
 .btn--active{
@@ -60,6 +62,17 @@ html, body{
 
 .img--lightbackground{
     background-color: $light;
+}
+
+.fnt--montserrat{
+    font-family: "Montserrat";
+    font-size: 1.1rem;
+    line-height: 125%;
+}
+
+.fnt--pxl{
+    font-family: dogicapixel;
+    line-height: 150%;
 }
 
 @media only screen and (max-width: $medium){
