--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,6 @@
 @import "include/var.scss";
 @import "include/global.scss";
+@import "include/nav.scss";
 @import "include/home.scss";
 @import "include/games.scss";
 @import "include/about.scss";
