--- a/assets/scss/include/global.scss
+++ b/assets/scss/include/global.scss
@@ -52,9 +52,16 @@ html, body{
     transition: all 0.5s ease;
     text-decoration: none;
     background-color: $dark;
+    cursor: pointer;
 
     i{
         transition: all 0.5s ease;
+    }
+
+    &--spin{
+        &:hover{
+            transform: translate(7px, -7px) rotate(360deg) !important;
+        }
     }
 }
 
@@ -68,7 +75,7 @@ html, body{
         color: $dark;
     }
 }
-
+    
 .btn--active{
     background-color: $light;
     color: $dark;
