--- a/assets/scss/include/global.scss
+++ b/assets/scss/include/global.scss
@@ -62,6 +62,12 @@ html, body{
         &:hover{
             transform: translate(7px, -7px) rotate(360deg) !important;
         }
+        &:active{
+            background-color: $dark !important;
+            color: $light;
+            transform: translate(0px, 0px) rotate(360deg) !important;
+
+        }
     }
 }
 
@@ -108,4 +114,8 @@ html, body{
     .btn{
         margin: 0.5rem;
     }
+}
+
+iframe{
+    user-select: none;
 }
