--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,7 @@ nav {
   width: 45%;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  position: relative;
 }
 .member__img {
   height: 100px;
