--- a/assets/scss/include/about.scss
+++ b/assets/scss/include/about.scss
@@ -15,6 +15,7 @@
     text-decoration: none;
     width: 45%;
     transition: all 0.5s ease;
+    position: relative;
 
     &__img{
         height: 100px;
