updated about styling

--- a/assets/scss/include/about.scss
+++ b/assets/scss/include/about.scss
@@ -20,7 +20,7 @@
     &__img{
         height: 100px;
         width: 100px;
-        border-radius: 25px;
+        // border-radius: 25px;
         object-fit: cover;
         object-position: 25% 0;
 
