--- a/assets/scss/include/about.scss
+++ b/assets/scss/include/about.scss
@@ -25,8 +25,9 @@
         object-position: 25% 0;
 
         &--patrick{
-            outline: 4px solid #6853bc;
-            outline-offset: -4px;
+            $borderSize: 5px;
+            outline: $borderSize solid #6853bc;
+            outline-offset: -$borderSize;
         }
     }
 
